[package]
name = "nexus-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
# `nexus-engine` is the primary binary; `nexus-doctor` is an op-tool.
# Pin the default so `cargo run -p nexus-engine` doesn't error with
# "could not determine which binary to run".
default-run = "nexus-engine"

[features]
default = []
gstreamer = ["nexus-pipeline/gstreamer"]
# M-Install Checkpoint 2 — feature proxies that forward into
# nexus-inference. The release pipeline (and the kitchen-sink Docker
# image) selects `ort,ep-cpu,ep-openvino,ep-cuda,ep-tensorrt`; lighter
# builds (LAN dev box, CI smoke) leave them off and pay zero cost.
ort = ["nexus-inference/ort"]
ep-cpu = ["nexus-inference/ep-cpu"]
ep-openvino = ["nexus-inference/ep-openvino"]
ep-cuda = ["nexus-inference/ep-cuda"]
ep-tensorrt = ["nexus-inference/ep-tensorrt"]
ep-coreml = ["nexus-inference/ep-coreml"]
ep-directml = ["nexus-inference/ep-directml"]
# M7 Step 6F2 — dev-only event-injection endpoint at
# `POST /api/v1/_test/inject_event`. Lets the Playwright e2e suite
# fire AlertEvents into the outbox without needing a live RTSP
# source + a deterministic-on-demand person track. NEVER enable in
# production builds — the endpoint sits OUTSIDE the admin-auth gate
# (so the e2e fixture can hit it on loopback) and would let any
# caller inject arbitrary events. Off by default.
test-injection = []

[[bin]]
name = "nexus-engine"
path = "src/main.rs"

# `nexus-doctor` runs the INSTALL.md §9 smoke checks against a live
# engine on `http://localhost:8089`. Lives here (instead of in its
# own crate) because it shares no code with the engine but does
# share the engine's release-pipeline cadence (M-Install Checkpoint 1).
[[bin]]
name = "nexus-doctor"
path = "src/bin/doctor.rs"

# `nexus-netd` is the small, narrowly-scoped helper the engine
# shells out to via `sudo -n` to mutate OS-level network config.
# Three subcommands: `apply <plan.yaml>` (rewrite
# /etc/netplan/90-nexus.yaml + `netplan try --timeout 120`),
# `confirm` (accept the in-flight `netplan try`), and `rollback`
# (revert to the prior config). Linux-only at runtime — the macOS
# build still compiles it but every subcommand prints
# "platform_unsupported" and exits non-zero so the engine's
# integration shim can detect it cleanly. Sudoers entry lives in
# `deploy/sudoers.d/nexus-netd` (installed by the Dockerfile +
# bare-metal install script).
[[bin]]
name = "nexus-netd"
path = "src/bin/nexus_netd.rs"

[dependencies]
nexus-types = { workspace = true }
nexus-config = { workspace = true }
nexus-bus = { workspace = true }
nexus-telemetry = { workspace = true }
nexus-store = { workspace = true }
nexus-rules = { workspace = true }
nexus-tracker = { workspace = true }
nexus-inference = { workspace = true }
nexus-pipeline = { workspace = true }
nexus-storage = { workspace = true }
# M7 — alert delivery. Defines `AlertSink`, `SinkRegistry`, and the
# `SinkDispatcher` background task that drains `alert_sink_outbox`.
# nexus-engine just spawns the dispatcher in main.rs; the timer loop
# lives in `nexus_sinks::dispatcher` so it's library-testable.
# The `webhook` feature pulls reqwest + hmac + sha2 + hex for the
# JSON-POST sink — engines that ship without HTTP egress (rare in
# practice) can drop it.
nexus-sinks = { workspace = true, features = ["webhook"] }
# Cloud cold backends (Google Drive, OneDrive). Brings reqwest +
# OAuth + per-provider HTTP. The crate is always-on in nexus-engine
# even though LAN-only deployments never instantiate a cloud
# backend — splitting it into a feature flag would multiply the
# CI matrix without saving bytes on disk (reqwest+rustls is
# already in the dep graph via the cold-replicator's HTTP path).
nexus-storage-cloud = { workspace = true }
# Probe library for `--tier auto` (M-Install Checkpoint 1) and the
# `nexus-doctor` binary. Pure-Rust; pulls in serde + chrono only.
nexus-probe = { workspace = true }
# Phase 1.7 — edge-side cloud client. Provides the
# `RpcDispatcher`/`Verifier`/`AuditSink` trait surface that the
# engine wires up at boot (see `cloud_audit.rs` for the local
# SQLite-backed sink).
nexus-cloud-client = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
futures = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }

# HS256 bearer verifier for admin writes (M2.2 Phase 2 step 12).
jsonwebtoken = { workspace = true }

# M6 Phase 2 Step 2.2 — argon2id password hashing for local user
# accounts. Used by `auth::passwords::{hash_password, verify_password}`.
argon2 = { workspace = true }

# HTTP client for `nexus-doctor` (M-Install Checkpoint 1). Uses the
# `blocking` API so the doctor binary can stay sync — no tokio runtime
# required for an 8-step smoke test against `http://localhost:8089`.
reqwest = { workspace = true, features = ["blocking"] }

image = { workspace = true }
async-stream = "0.3"
sha2 = "0.10"

# M-Admin Phase 0 — streaming diagnostics tarball
# (`GET /v1/admin/diagnostics/export`). Tar entries are
# generated in a `spawn_blocking` worker that writes through
# a `flate2::write::GzEncoder` wrapping the sender half of a
# bounded mpsc; axum streams the receiver half back as the
# response body so memory stays O(buffer-size) regardless of
# bundle size. Both crates are pure-Rust, zero C deps. The
# `bytes` crate is workspace-pinned to avoid duplicating the
# `Bytes` type vs the one axum uses internally.
tar = "0.4"
flate2 = "1"
bytes = { workspace = true }

# M-Dashboard Phase 2 — host metrics for the operator dashboard.
# Cross-platform CPU / RAM / disk / process snapshot. Cached for 1s
# inside `system_metrics.rs` to keep poll cost bounded.
sysinfo = { workspace = true }

# M-Install Checkpoint 2 — token bytes for the auto-provisioned
# dev_token. `getrandom 0.3` is already in the dep graph
# transitively (via rand-using crates); pinning it here makes
# the dependency explicit instead of leaning on a transitive.
getrandom = "0.3"
# URL-safe base64 encoding for that token.
base64 = { workspace = true }

# M-Admin Phase 1B — camera discovery. CIDR parsing + host
# enumeration for the LAN sweep, and lock-free session registry
# shared with the eviction task.
ipnet = { workspace = true }
dashmap = { workspace = true }
# WS-Discovery ProbeMatch parser (M-Admin Phase 1B Step C).
quick-xml = { workspace = true }
# RTSP Digest auth (M-Admin Phase 1B Step D).
md-5 = { workspace = true }
# WS-UsernameToken digest for ONVIF Media SOAP auth
# (M-Admin Phase 1B Step E — discovery::onvif_media). The spec
# (WS-Security UsernameToken Profile 1.0 §3.1) mandates SHA-1
# for `PasswordDigest`; no negotiation, no upgrade path. Pinned
# to the same RustCrypto family already in the workspace.
sha1 = "0.10"

# M-Admin Network — physical NIC enumeration (cross-platform via
# if-addrs) + netplan YAML round-trip (Ubuntu-only mutation path).
# See `network::enumerate` and `network::plan`. Both shared across
# the engine binary and the `nexus-netd` helper.
if-addrs = { workspace = true }
serde_yaml = { workspace = true }

# statvfs for the watermark sampler. Unix-only — non-unix builds
# fall back to a never-panic probe (see storage_safety.rs).
# `resource` enables getrlimit/setrlimit so we can raise the
# per-process file-descriptor cap at startup before the LAN
# discovery sweep opens ~3× concurrency sockets in parallel.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = [
    "fs",
    "resource",
] }

# NVIDIA GPU telemetry. nvml-wrapper dynamically loads
# `libnvidia-ml.so` at runtime via `Nvml::init()` — when the
# driver isn't installed the call returns Err and `gpu.rs` falls
# back to the Intel iGPU sysfs reader. So adding this dep does
# NOT make the engine require an NVIDIA driver.
#
# Linux-only because Windows/macOS use a different shim
# (`nvml.dll` / no support) that we don't target on the edge box.
[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.10"
# Linux-only: `network::apply` stages netplan YAML into a tempfile
# before invoking the sudo helper. Windows/macOS never compile that
# branch, so tempfile is gated to Linux too. Tests on every platform
# also need it (see [dev-dependencies] below) — workspace dep means
# both entries resolve to the same crate version.
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
base64 = { workspace = true }
# Used by audit_retention tests to backdate `audit_log.created_at`
# (Store has no public API for inserting at a specified historical
# timestamp — by design; sweeper tests are the only consumer).
sqlx = { workspace = true }
# M6 Phase 3 Step 3.1 — fake OIDC IdP for the discovery + JWKS
# fetch path. `wiremock` boots a real tokio HTTP server so we
# can validate the live HTTP code-path, not just a mocked
# in-memory fetcher.
wiremock = { workspace = true }
