[package]
name = "nexus-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
# Per-EP feature flags. Each EP feature implicitly enables the `ort`
# integration so building with e.g. `--features ep-openvino` is
# enough — no need to also pass `--features ort`.
ep-cpu      = ["ort"]
ep-openvino = ["ort"]
ep-cuda     = ["ort"]
ep-coreml   = ["ort"]
ep-tensorrt = ["ort"]
ep-directml = ["ort"]
# Wire ORT itself; selected automatically by any ep-* feature above.
# Listed separately so `--features ort` (no EPs) still compiles the
# session-builder code path for diagnostics / dry-runs — that build
# falls through to CPU at runtime via the fallback in
# `execution_providers::selected_for_priority`.
ort         = ["dep:ort", "dep:ndarray"]

[dependencies]
nexus-types = { workspace = true }
nexus-config = { workspace = true }
# M3.1 Phase F: needed by the Store-backed VisualPromptStore impl
# (used by both the engine and the nexus-inference-worker binary).
# The lib code only references it from the visual_store_sqlite
# module — pure-CPU / non-visual builds pay only the compile cost,
# not a runtime one.
nexus-store = { workspace = true }
async-trait = { workspace = true }
# M3.2: ensemble detector fans out members in parallel via
# futures::future::join_all. Keeps a single dep edge for the
# inference crate (tokio::join would also work but doesn't compose
# over a runtime-length Vec of futures without explicit pinning).
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
crossbeam-channel = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }

ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

# nexus-inference-worker: out-of-process detector worker. Spawned by
# WorkerProcessBackend and driven over stdio with length-prefixed bincode.
# Kept in this crate (not nexus-engine) so the worker stays a thin shim
# over the Detector + worker_proto module that ships with the library.
[[bin]]
name = "nexus-inference-worker"
path = "src/bin/nexus-inference-worker.rs"

[dev-dependencies]
tokio = { workspace = true }
url = { workspace = true }
